--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,11 +11,12 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <permission android:name="com.example.androidobligkaraktergivende.permission.C2D_MESSAGE" 
         android:protectionLevel="signature" />
     <uses-permission android:name="com.example.androidobligkaraktergivende.permission.C2D_MESSAGE" />
-    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     
     <application
         android:allowBackup="true"
@@ -37,6 +38,7 @@
             
         </activity>
         <activity 
+            
             android:name="com.example.androidobligkaraktergivende.MainActivity"
             android:label="@string/app_name">
             
@@ -51,7 +53,7 @@
             </intent-filter>
         </receiver>
         <service android:name=".GCMIntentService" />
-        
+        <service android:name=".UpdatepositionService"/>
         
     </application>
 
