--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,12 +17,25 @@
         android:protectionLevel="signature" />
     <uses-permission android:name="com.example.androidobligkaraktergivende.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    
+    <uses-permission android:name="com.example.androidobligkaraktergivende.permission.MAPS_RECEIVE" />
+    <permission android:name="com.example.androidobligkaraktergivende.permission.MAPS_RECEIVE" 
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <!-- External storage for caching. -->
+  	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  	<uses-feature
+    	android:glEsVersion="0x00020000"
+    	android:required="true"/>
+  	
     <application
         android:allowBackup="true"
 
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+      		android:name="com.google.android.maps.v2.API_KEY"
+      		android:value="AIzaSyA1EzkhyKY45MFiM_Aqld-rr7TL_EZXUy4"/>
+        
         <activity
             android:name="com.example.androidobligkaraktergivende.RegistrationActivity"
             android:label="@string/app_name" >
