--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.androidobligkaraktergivende"
     android:versionCode="1"
     android:versionName="1.0" >
-
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
@@ -31,6 +30,7 @@
         android:allowBackup="true"
 
         android:label="@string/app_name"
+        android:icon="@drawable/ic_app"
         android:theme="@style/AppTheme" >
         <meta-data
       		android:name="com.google.android.maps.v2.API_KEY"
@@ -53,6 +53,7 @@
         <activity 
             
             android:name="com.example.androidobligkaraktergivende.MainActivity"
+            android:configChanges="orientation"
             android:label="@string/app_name">
             
         </activity>
